align fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5251,7 +5251,7 @@ a {
 }
 
 .media-body {
-  margin-top: 15px;
+  margin-top: 5px;
 }
 .product .cart .action ul li.lnk a {
   background: #a8a8a8;
